fix class parameters

--- a/modules/puppet_brcd_devstack/templates/localrc-controller.erb
+++ b/modules/puppet_brcd_devstack/templates/localrc-controller.erb
@@ -26,8 +26,8 @@ enable_service quantum
 
 # Enable brocade quantum plugin
 Q_PLUGIN=brocade
-VCS_USERNAME=<% vcs_username %>
-VCS_PASSWORD=<% vcs_password %>
+VCS_USERNAME=<%= vcs_username %>
+VCS_PASSWORD=<%= vcs_password %>
 VCS_IPADDR=<%= vcs_ipaddr %>
 BRCD_PHYSICAL_INTERFACE=<%= tenant_int %>
 
