update compute localrc params

--- a/modules/puppet_brcd_devstack/templates/localrc-compute.erb
+++ b/modules/puppet_brcd_devstack/templates/localrc-compute.erb
@@ -29,7 +29,7 @@ LOGDAYS=1
 HOST_IP=<%= ipaddress_eth1 %>
 
 # This is the controller node’s IP
-SERVICE_HOST=192.168.100.2
+SERVICE_HOST=<%= ctrl_ip %>
 
 MYSQL_HOST=$SERVICE_HOST
 RABBIT_HOST=$SERVICE_HOST
